release: DocsMint 0.6.0
